--- a/catalog_women.html
+++ b/catalog_women.html
@@ -36,7 +36,7 @@
                         </svg>
                     </a>
                 </div>
-                <div class="location">
+                <div class="location location_menu">
                     <div class="header_text_light choosed_location"></div>
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                         <path d="M10.0025 9.775C10.3736 9.775 10.6903 9.64306 10.9525 9.37917C11.2147 9.11528 11.3458 8.79778 11.3458 8.42667C11.3458 8.05556 11.2139 7.73889 10.95 7.47667C10.6856 7.21444 10.3681 7.08333 9.9975 7.08333C9.62695 7.08333 9.31028 7.21556 9.0475 7.48C8.78528 7.74389 8.65417 8.06139 8.65417 8.4325C8.65417 8.80361 8.78611 9.12028 9.05 9.3825C9.31445 9.64472 9.63195 9.77583 10.0025 9.77583V9.775ZM10 16.3983C11.5667 15.035 12.805 13.6486 13.715 12.2392C14.625 10.8292 15.08 9.60972 15.08 8.58083C15.08 7.05639 14.5975 5.79806 13.6325 4.80583C12.6675 3.81361 11.4567 3.3175 10 3.3175C8.54389 3.3175 7.33306 3.81333 6.3675 4.805C5.40195 5.79667 4.91945 7.055 4.92 8.58C4.92 9.60889 5.375 10.8283 6.285 12.2383C7.19556 13.6478 8.43389 15.0339 10 16.3967V16.3983ZM10 17.5167C8.04167 15.785 6.56667 14.17 5.575 12.6717C4.58278 11.1733 4.08667 9.80972 4.08667 8.58083C4.08667 6.81806 4.66056 5.36417 5.80834 4.21917C6.95667 3.07306 8.35389 2.5 10 2.5C11.6461 2.5 13.0433 3.07278 14.1917 4.21833C15.3394 5.36333 15.9133 6.81722 15.9133 8.58C15.9133 9.80889 15.4175 11.1725 14.4258 12.6708C13.4336 14.1692 11.9583 15.7842 10 17.5158V17.5167Z" fill="white" />
@@ -213,14 +213,14 @@
     <!-- Шапка мобильной версии начало -->
     <div class="header_mobile">
         <div class="container">
-            <a href="main_mobile+fixed_menu_1_level.html" class="icon_menu">
+            <div class="icon_menu">
                 <svg xmlns="http://www.w3.org/2000/svg" width="27" height="25" viewBox="0 0 27 25" fill="none" class="icon_menu__burger">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M3.375 5.72982C3.375 5.59168 3.43426 5.45921 3.53975 5.36153C3.64524 5.26386 3.78832 5.20898 3.9375 5.20898H23.0625C23.2117 5.20898 23.3548 5.26386 23.4602 5.36153C23.5657 5.45921 23.625 5.59168 23.625 5.72982C23.625 5.86795 23.5657 6.00043 23.4602 6.0981C23.3548 6.19578 23.2117 6.25065 23.0625 6.25065H3.9375C3.78832 6.25065 3.64524 6.19578 3.53975 6.0981C3.43426 6.00043 3.375 5.86795 3.375 5.72982ZM3.375 12.5007C3.375 12.3625 3.43426 12.23 3.53975 12.1324C3.64524 12.0347 3.78832 11.9798 3.9375 11.9798H23.0625C23.2117 11.9798 23.3548 12.0347 23.4602 12.1324C23.5657 12.23 23.625 12.3625 23.625 12.5007C23.625 12.6388 23.5657 12.7713 23.4602 12.8689C23.3548 12.9666 23.2117 13.0215 23.0625 13.0215H3.9375C3.78832 13.0215 3.64524 12.9666 3.53975 12.8689C3.43426 12.7713 3.375 12.6388 3.375 12.5007ZM3.375 19.2715C3.375 19.1334 3.43426 19.0009 3.53975 18.9032C3.64524 18.8055 3.78832 18.7507 3.9375 18.7507H23.0625C23.2117 18.7507 23.3548 18.8055 23.4602 18.9032C23.5657 19.0009 23.625 19.1334 23.625 19.2715C23.625 19.4096 23.5657 19.5421 23.4602 19.6398C23.3548 19.7374 23.2117 19.7923 23.0625 19.7923H3.9375C3.78832 19.7923 3.64524 19.7374 3.53975 19.6398C3.43426 19.5421 3.375 19.4096 3.375 19.2715Z" fill="#393939" />
                 </svg>
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 27 27" fill="none" class="icon_menu__close">
-                <path d="M6.01015 23L5 21.9899L12.9899 14L5 6.01015L6.01015 5L14 12.9899L21.9899 5L23 6.01015L15.0101 14L23 21.9899L21.9899 23L14 15.0101L6.01015 23Z" fill="#393939"/>
-            </svg>    -->
-            </a>
+                <svg xmlns="http://www.w3.org/2000/svg" width="27" height="27" viewBox="0 0 27 27" fill="none" class="icon_menu__close">
+                    <path d="M6.01015 23L5 21.9899L12.9899 14L5 6.01015L6.01015 5L14 12.9899L21.9899 5L23 6.01015L15.0101 14L23 21.9899L21.9899 23L14 15.0101L6.01015 23Z" fill="#393939" />
+                </svg>
+            </div>
             <!-- Меню мобильной версии начало -->
             <div class="menu_mobile">
                 <div class="menu_mobile__category_part">
@@ -233,24 +233,24 @@
                         </a>
                         <input placeholder="Поиск" type="search" class="search_form">
                     </form>
-                    <a href="#" class="category_part__item">
+                    <div class="category_part__item">
                         <p class="small_text uppercase">Женщины</p>
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                             <path d="M8.33203 14.1673L12.4987 10.0007L8.33203 5.83398" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
-                    </a>
-                    <a href="#" class="category_part__item">
+                    </div>
+                    <div class="category_part__item">
                         <p class="small_text uppercase">Мужчины</p>
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                             <path d="M8.33203 14.1673L12.4987 10.0007L8.33203 5.83398" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
-                    </a>
-                    <a href="#" class="category_part__item">
+                    </div>
+                    <div class="category_part__item">
                         <p class="small_text red">Sale</p>
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                             <path d="M8.33203 14.1673L12.4987 10.0007L8.33203 5.83398" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
-                    </a>
+                    </div>
                 </div>
                 <div class="menu_mobile__info_part">
                     <a href="personal_account_info.html" class="info_part__item header_text_light">
@@ -262,10 +262,12 @@
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                             <path d="M10.0007 18.0176C9.87799 18.0172 9.75883 17.9762 9.66185 17.9009C6.57296 15.5009 4.44519 13.4343 2.9563 11.3954C1.0563 8.78981 0.622962 6.38425 1.66741 4.24536C2.41185 2.71759 4.55074 1.46759 7.05074 2.19537C8.24271 2.53966 9.28268 3.27802 10.0007 4.28981C10.7188 3.27802 11.7588 2.53966 12.9507 2.19537C15.4452 1.4787 17.5896 2.71759 18.3341 4.24536C19.3785 6.38425 18.9452 8.78981 17.0452 11.3954C15.5563 13.4343 13.4285 15.5009 10.3396 17.9009C10.2427 17.9762 10.1235 18.0172 10.0007 18.0176ZM5.62852 3.10092C5.03366 3.07777 4.44373 3.21706 3.92204 3.50384C3.40036 3.79061 2.96663 4.21405 2.66741 4.7287C1.8063 6.49536 2.19518 8.46203 3.8563 10.7343C5.62161 13.0112 7.68875 15.0373 10.0007 16.7565C12.3124 15.039 14.3795 13.0148 16.1452 10.7398C17.8119 8.46203 18.1952 6.49536 17.3341 4.73425C16.7785 3.62314 15.1119 2.73981 13.2563 3.26203C12.6613 3.43787 12.1098 3.73632 11.6371 4.13818C11.1644 4.54005 10.7811 5.03642 10.5119 5.59536C10.47 5.69726 10.3988 5.78441 10.3073 5.84575C10.2158 5.90708 10.1081 5.93983 9.99796 5.93983C9.88781 5.93983 9.78014 5.90708 9.68864 5.84575C9.59713 5.78441 9.52593 5.69726 9.48408 5.59536C9.21684 5.03503 8.8342 4.53749 8.36124 4.13538C7.88827 3.73326 7.33566 3.43564 6.73963 3.26203C6.37851 3.15714 6.00456 3.10292 5.62852 3.10092Z" fill="white" />
                         </svg> Избранное </a>
-                    <a href="#" class="info_part__item header_text_light">
+                    <div class="info_part__item location">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                             <path d="M10.0025 9.775C10.3736 9.775 10.6903 9.64306 10.9525 9.37917C11.2147 9.11528 11.3458 8.79778 11.3458 8.42667C11.3458 8.05556 11.2139 7.73889 10.95 7.47667C10.6856 7.21444 10.3681 7.08333 9.9975 7.08333C9.62695 7.08333 9.31028 7.21556 9.0475 7.48C8.78528 7.74389 8.65417 8.06139 8.65417 8.4325C8.65417 8.80361 8.78611 9.12028 9.05 9.3825C9.31445 9.64472 9.63195 9.77583 10.0025 9.77583V9.775ZM10 16.3983C11.5667 15.035 12.805 13.6486 13.715 12.2392C14.625 10.8292 15.08 9.60972 15.08 8.58083C15.08 7.05639 14.5975 5.79806 13.6325 4.80583C12.6675 3.81361 11.4567 3.3175 10 3.3175C8.54389 3.3175 7.33306 3.81333 6.3675 4.805C5.40195 5.79667 4.91945 7.055 4.92 8.58C4.92 9.60889 5.375 10.8283 6.285 12.2383C7.19556 13.6478 8.43389 15.0339 10 16.3967V16.3983ZM10 17.5167C8.04167 15.785 6.56667 14.17 5.575 12.6717C4.58278 11.1733 4.08667 9.80972 4.08667 8.58083C4.08667 6.81806 4.66056 5.36417 5.80834 4.21917C6.95667 3.07306 8.35389 2.5 10 2.5C11.6461 2.5 13.0433 3.07278 14.1917 4.21833C15.3394 5.36333 15.9133 6.81722 15.9133 8.58C15.9133 9.80889 15.4175 11.1725 14.4258 12.6708C13.4336 14.1692 11.9583 15.7842 10 17.5158V17.5167Z" fill="white" />
-                        </svg> Екатеринбург </a>
+                        </svg>
+                        <div class="header_text_light choosed_location"></div>
+                    </div>
                     <div class="info_part__item header_text_light">
                         <a href="whatsapp:+78000000000">
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="whatsapp_icon">
@@ -289,12 +291,6 @@
                         <path d="M17.4366 5.3003C14.8241 1.2503 9.47409 0.050297 5.33659 2.5628C1.29909 5.0753 -0.000914246 10.5503 2.61159 14.5878L2.82409 14.9128L1.94909 18.1878L5.22409 17.3128L5.54909 17.5253C6.96159 18.2878 8.49909 18.7253 10.0241 18.7253C11.6616 18.7253 13.2991 18.2878 14.7116 17.4128C18.7491 14.7878 19.9491 9.4253 17.4366 5.2753V5.3003ZM15.1491 13.7253C14.7116 14.3753 14.1616 14.8128 13.3991 14.9253C12.9616 14.9253 12.4116 15.1378 10.2366 14.2753C8.38659 13.4003 6.84909 11.9753 5.76159 10.3378C5.11159 9.5753 4.77409 8.5878 4.67409 7.6003C4.67409 6.7253 4.99909 5.9628 5.54909 5.4128C5.76159 5.2003 5.98659 5.0878 6.19909 5.0878H6.74909C6.96159 5.0878 7.18659 5.0878 7.29909 5.5253C7.51159 6.0753 8.06159 7.3878 8.06159 7.5003C8.17409 7.6128 8.12409 8.4503 7.62409 8.9253C7.34909 9.2378 7.29909 9.2503 7.41159 9.4753C7.84909 10.1253 8.39909 10.7878 8.93659 11.3378C9.58659 11.8878 10.2491 12.3253 11.0116 12.6503C11.2241 12.7628 11.4491 12.7628 11.5616 12.5378C11.6741 12.3253 12.2116 11.7753 12.4366 11.5503C12.6491 11.3378 12.7616 11.3378 12.9866 11.4378L14.7366 12.3128C14.9491 12.4253 15.1741 12.5253 15.2866 12.6378C15.3991 12.9628 15.3991 13.4003 15.1741 13.7253H15.1491Z" fill="#03CEA4" />
                     </svg>
                 </a>
-                <!-- <form method="GET" action="#" class="search">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none" class="loupe">
-                    <path d="M9.0722 2.80539C10.2756 2.80429 11.4523 3.16014 12.4534 3.82792C13.4546 4.49569 14.2351 5.4454 14.6964 6.55688C15.1577 7.66837 15.279 8.8917 15.0449 10.0721C14.8108 11.2525 14.2318 12.337 13.3813 13.1883C12.5307 14.0396 11.4468 14.6196 10.2666 14.8548C9.0864 15.0899 7.86296 14.9698 6.75105 14.5095C5.63914 14.0493 4.68873 13.2695 4.02004 12.269C3.35135 11.2685 2.99442 10.0921 2.99442 8.88873C3.00172 7.27853 3.64422 5.73629 4.78229 4.59718C5.92036 3.45807 7.46202 2.81416 9.0722 2.80539ZM9.0722 1.6665C7.64378 1.6665 6.24744 2.09008 5.05975 2.88367C3.87206 3.67726 2.94637 4.80521 2.39974 6.1249C1.8531 7.44459 1.71008 8.89674 1.98875 10.2977C2.26742 11.6987 2.95527 12.9856 3.96532 13.9956C4.97536 15.0057 6.26224 15.6935 7.66322 15.9722C9.06419 16.2508 10.5163 16.1078 11.836 15.5612C13.1557 15.0146 14.2837 14.0889 15.0773 12.9012C15.8708 11.7135 16.2944 10.3171 16.2944 8.88873C16.2944 6.97327 15.5335 5.13627 14.1791 3.78184C12.8247 2.42741 10.9877 1.6665 9.0722 1.6665Z" fill="#393939"/>
-                    <path d="M19.4445 18.4943L15.35 14.3721L14.5612 15.1554L18.6556 19.2776C18.707 19.3294 18.7682 19.3706 18.8355 19.3988C18.9029 19.4269 18.9751 19.4416 19.0481 19.4418C19.1211 19.4421 19.1934 19.428 19.2609 19.4003C19.3285 19.3726 19.3899 19.3318 19.4417 19.2804C19.4935 19.229 19.5347 19.1678 19.5628 19.1005C19.591 19.0331 19.6057 18.9609 19.6059 18.8879C19.6062 18.8149 19.592 18.7426 19.5643 18.6751C19.5367 18.6075 19.4959 18.5461 19.4445 18.4943Z" fill="#393939"/>
-                </svg>
-            </form> -->
                 <div class="basket">
                     <a href="basket_full.html">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
@@ -1149,10 +1145,10 @@
     <!-- Женщины конец -->
     <!-- Каталог женщины мобильный начало -->
     <div class="catalog_women_mobile">
-        <a href="catalog_closed_filters.html">
+        <a href="catalog_opened_filters+checkbox+active.html">
             <img src="./img/catalog_main/catalog_women/clothes.png" class="catalog_mobile_foto" alt="">
         </a>
-        <a href="catalog_closed_filters.html" class="category_part__item">
+        <a href="catalog_opened_filters+checkbox+active.html" class="category_part__item">
             <p class="small_text uppercase">Одежда</p>
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
                 <path d="M8.33203 14.1673L12.4987 10.0007L8.33203 5.83398" stroke="#393939" stroke-width="0.833333" stroke-linecap="round" stroke-linejoin="round" />
